kubernetes/apps/home-automation/homeassistant/patches/httproute-add-homepage-annotations.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant"
    gethomepage.dev/description: "Home automation"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "home-assistant.png"
